--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,15 @@
     rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.css">
+  <link rel="stylesheet" href="css/magnific-popup.css">
   <link rel="stylesheet" href="css/style.css">
+  <style>
+    .direction__basic::after {
+      background: url(images/direction-bg.jpg);
+    }
+  </style>
 </head>
+
 <body>
   <header class="header" style="background-image: url(images/background.jpg);">
     <div class="container">
@@ -37,13 +44,274 @@
           Поехали с нами за новыми впечатлениями!
         </div>
         <a class="big-btn" href="#contact">Оставить заявку</a>
+        <a class="arrow-btn" href="#"><img src="images/arrow-button.svg" alt=""></a>
       </div>
     </div>
   </header>
+  <section class="direction">
+    <div class="container">
+      <div class="direction__inner">
+        <div class="direction__item">
+          <img src="images/direction-1.jpg" alt="">
+          <p class="direction__text">Намибия</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-2.jpg" alt="">
+          <p class="direction__text">Танзания</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-3.jpg" alt="">
+          <p class="direction__text">Кения</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-4.jpg" alt="">
+          <p class="direction__text">Ботсвана</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-5.jpg" alt="">
+          <p class="direction__text">Кейптаун</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-6.jpg" alt="">
+          <p class="direction__text">Мадагаскар</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-7.jpg" alt="">
+          <p class="direction__text">Занзибар</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-8.jpg" alt="">
+          <p class="direction__text">ЮАР</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-9.jpg" alt="">
+          <p class="direction__text">Мозамбик</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-10.jpg" alt="">
+          <p class="direction__text">Замбия</p>
+        </div>
+        <div class="direction__item">
+          <img src="images/direction-11.jpg" alt="">
+          <p class="direction__text">Конго</p>
+        </div>
+      </div>
+    </div>
+    <div class="direction__basic">
+      <div class="direction__basic-bg"></div>
+      <div class="container">
+        <h2>Основные направления</h2>
+        <div class="direction__basic-box">
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-1.svg" alt=""></div>
 
+            <div class="direction__basic-text">Полная организация отдыха: групповые и индивидуальные туры.</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-2.svg" alt=""></div>
+
+            <div class="direction__basic-text">Организация трансфера из любой точки мира</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-3.svg" alt=""></div>
+
+            <div class="direction__basic-text">Проживание в отелях по маршруту</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-4.svg" alt=""></div>
+
+            <div class="direction__basic-text">Аренда автомобилей и любого вида транспорта</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-5.svg" alt=""></div>
+
+            <div class="direction__basic-text">Медицинская страховка</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"> <img src="images/icon-6.svg" alt=""></div>
+
+            <div class="direction__basic-text">Сопровождение русскоговорящих гидов</div>
+          </div>
+          <div class="direction__basic-item">
+            <div class="direction__basic-img"><img src="images/icon-7.svg" alt=""></div>
+
+            <div class="direction__basic-text">Организация VIP-туров</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="popular">
+    <div class="container">
+      <h2>Популярные предложения</h2>
+      <div class="popular__items">
+        <a class="popular__link" href="#" style="background-image: url(images/popular-1.jpg);">
+          <h4 class="popoular__link-title">ПУТЕШЕСТВИЕ ПО НАМИБИИ</h4>
+          <p class="popular__price">от 3000 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-2.jpg);">
+          <h4 class="popoular__link-title">КЛАССИКА КЕНИИ</h4>
+          <p class="popular__price">от 3500 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-3.jpg);">
+          <h4 class="popoular__link-title popoular__link-title--big">САМЫЕ ПОПУЛЯРНЫЕ САФАРИ ПАРКИ И ЗАПОВЕДНИКИ
+            ТАНЗАНИИ</h4>
+          <p class="popular__country">Танзания</p>
+          <p class="popular__time">7 дней / 6 ночей</p>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-4.jpg);">
+          <h4 class="popoular__link-title">ИССЛЕДОВАНИЕ БОТСВАНЫ</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-5.jpg);">
+          <h4 class="popoular__link-title">ПУТЕШЕСТВИЕ ЧЕРЕЗ 5 СТРАН ЮЖНОЙ АФРИКИ</h4>
+          <p class="popular__price">от 5000 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-6.jpg);">
+          <h4 class="popoular__link-title popoular__link-title--big">ГРАНДИОЗНОЕ ПРИКЛЮЧЕНИЕ ПО 9 СТРАНАМ АФРИКИ</h4>
+          <p class="popular__country">ЮАР, Замбия, Намибия, Зимбабве, Ботсвана, Мозамбик, Танзания, Кения</p>
+          <p class="popular__time">24 дня / 23 ночи</p>
+          <p class="popular__price">от 6000 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-7.jpg);">
+          <h4 class="popoular__link-title">ВЕЛИКОЛЕПНЫЙ КЕЙПТАУН</h4>
+          <p class="popular__price">от 75 880 грн.</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-8.jpg);">
+          <h4 class="popoular__link-title">ПУТЕШЕСТВИЕ ПО ЮАР:</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-9.jpg);">
+          <h4 class="popoular__link-title">ВЕЛИКАЯ МИГРАЦИЯ В ТАНЗАНИИ И ОТДЫХ НА ЗАНЗИБАРЕ</h4>
+          <p class="popular__price">от 1700 $</p>
+        </a>
+        <a class="popular__link" href="#" style="background-image: url(images/popular-10.jpg);">
+          <h4 class="popoular__link-title">ОТ КЕЙПТАУНА ДО ВОДОПАДА ВИКТОРИЯ</h4>
+          <p class="popular__price">от 2500 $</p>
+        </a>
+      </div>
+    </div>
+  </section>
+  <section class="map">
+    <div class="container">
+      <h2>Карта Африки</h2>
+      <iframe class="map__iframe"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26941670.128514495!2d12.982368477225203!3d-15.515792699365123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10a06c0a948cf5d5%3A0x108270c99e90f0b3!2z0JDRhNGA0LjQutCw!5e1!3m2!1sru!2sua!4v1642358944794!5m2!1sru!2sua"
+        width="1120" height="609" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+  </section>
+  <section class="about">
+    <div class="container">
+      <div class="about__inner">
+        <div class="about__content">
+          <h2>О сафари турах</h2>
+          <p>Восточная и Южная Африка являются самыми популярными местами, где можно насладиться увлекательным
+            путешествием, под
+            названием сафари. Именно здесь созданы все условия, чтобы туристы могли почувствовать себя частичкой
+            девственной природы
+            Африки. Туры сафари в Африку характеризуются уникальными программами, в рамках которых туристы перемещаются
+            на
+            комфортабельных, специализированных автомобилях или автобусах.</p>
+          <a href="#">Читать подробней</a>
+        </div>
+        <div class="about__popup">
+          <a class="popup__link" href="https://www.youtube.com/watch?v=P8frC_cLLD4" savefrom_lm_index="0"
+            savefrom_lm="1" style="background-image: url(images/video-bg.jpg);">
+            <img src="images/popup.svg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="strime"><iframe width="560" height="315" src="https://www.youtube.com/embed/48MFrf5ADp8"
+      title="YouTube video player" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe></div>
+
+  <section class="galery">
+    <div class="container">
+      <div class="galery__top">
+        <h2>Фотогалерея</h2>
+        <a class="galery__link" href="#">Перейти в раздел</a>
+      </div>
+      <div class="galery__slider">
+        <div class="galery__item">
+          <div class="galery__item-inner">
+            <a href="images/galery-1.jpg" title="Safari"><img class="galery__item-img" src="images/galery-1.jpg" alt=""></a>
+            <a href="images/galery-2.jpg" title="Safari"><img class="galery__item-img" src="images/galery-2.jpg" alt=""></a>
+            <a href="images/galery-3.jpg" title="Safari"><img class="galery__item-img" src="images/galery-3.jpg" alt=""></a>
+            <a href="images/galery-4.jpg" title="Safari"><img class="galery__item-img" src="images/galery-4.jpg" alt=""></a>
+            <a href="images/galery-5.jpg" title="Safari"><img class="galery__item-img" src="images/galery-5.jpg" alt=""></a>
+            <a href="images/galery-6.jpg" title="Safari"><img class="galery__item-img" src="images/galery-6.jpg" alt=""></a>
+          </div>
+        </div>
+        <div class="galery__item">
+          <div class="galery__item-inner">
+            <a href="images/galery-7.jpg" title="Safari"><img class="galery__item-img" src="images/galery-7.jpg" alt=""></a>
+            <a href="images/galery-8.jpg" title="Safari"><img class="galery__item-img" src="images/galery-8.jpg" alt=""></a>
+            <a href="images/galery-9.jpg" title="Safari"><img class="galery__item-img" src="images/galery-9.jpg" alt=""></a>
+            <a href="images/galery-10.jpg" title="Safari"><img class="galery__item-img" src="images/galery-10.jpg"
+                alt=""></a>
+            <a href="images/galery-11.jpg" title="Safari"><img class="galery__item-img" src="images/galery-11.jpg"
+                alt=""></a>
+            <a href="images/galery-12.jpg" title="Safari"><img class="galery__item-img" src="images/galery-12.jpg"
+                alt=""></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+  <section class="premium">
+    <div class="container">
+      <div class="premium__title">Сафари тур премиум класса</div>
+      <div class="premium__text">
+          <p>Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими
+          животными в их привычной среде обитания.
+</p>
+          <p><span>САФАРИ ТУРИСТИК</span> специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари
+          туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.</p>
+          <p>Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то,
+          что удается лицезреть немногим ? тогда сафари туры созданы для вас.</p>
+          <p>Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями отдых.</p>
+          <p>Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора,
+          осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса, поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой,
+          первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все
+          подробности о программах уже сформированных туров по сафари.</p>
+      </div>
+      <div class="premium__info">
+        <div class="premium__info-item">
+          16
+          <p>лет успешной
+          работы</p>
+        </div>
+        <div class="premium__info-item">
+          50
+          <p>гостиниц без
+          посредников</p>
+        </div>
+        <div class="premium__info-item">
+          25+
+          <p>собственных
+          туров</p>
+        </div>
+        <div class="premium__info-item">
+          1 220 000
+          <p>кв. км – площадь наших
+          путешествий</p>
+        </div>
+        <div class="premium__info-item">
+          5000
+          <p>довольных туристов</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
-  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.magnific-popup.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
