--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe></div>
 
-  <section class="galery">
+  <section class="galery" id="contact">
     <div class="container">
       <div class="galery__top">
         <h2>Фотогалерея</h2>
@@ -238,19 +238,28 @@
       <div class="galery__slider">
         <div class="galery__item">
           <div class="galery__item-inner">
-            <a href="images/galery-1.jpg" title="Safari"><img class="galery__item-img" src="images/galery-1.jpg" alt=""></a>
-            <a href="images/galery-2.jpg" title="Safari"><img class="galery__item-img" src="images/galery-2.jpg" alt=""></a>
-            <a href="images/galery-3.jpg" title="Safari"><img class="galery__item-img" src="images/galery-3.jpg" alt=""></a>
-            <a href="images/galery-4.jpg" title="Safari"><img class="galery__item-img" src="images/galery-4.jpg" alt=""></a>
-            <a href="images/galery-5.jpg" title="Safari"><img class="galery__item-img" src="images/galery-5.jpg" alt=""></a>
-            <a href="images/galery-6.jpg" title="Safari"><img class="galery__item-img" src="images/galery-6.jpg" alt=""></a>
+            <a href="images/galery-1.jpg" title="Safari"><img class="galery__item-img" src="images/galery-1.jpg"
+                alt=""></a>
+            <a href="images/galery-2.jpg" title="Safari"><img class="galery__item-img" src="images/galery-2.jpg"
+                alt=""></a>
+            <a href="images/galery-3.jpg" title="Safari"><img class="galery__item-img" src="images/galery-3.jpg"
+                alt=""></a>
+            <a href="images/galery-4.jpg" title="Safari"><img class="galery__item-img" src="images/galery-4.jpg"
+                alt=""></a>
+            <a href="images/galery-5.jpg" title="Safari"><img class="galery__item-img" src="images/galery-5.jpg"
+                alt=""></a>
+            <a href="images/galery-6.jpg" title="Safari"><img class="galery__item-img" src="images/galery-6.jpg"
+                alt=""></a>
           </div>
         </div>
         <div class="galery__item">
           <div class="galery__item-inner">
-            <a href="images/galery-7.jpg" title="Safari"><img class="galery__item-img" src="images/galery-7.jpg" alt=""></a>
-            <a href="images/galery-8.jpg" title="Safari"><img class="galery__item-img" src="images/galery-8.jpg" alt=""></a>
-            <a href="images/galery-9.jpg" title="Safari"><img class="galery__item-img" src="images/galery-9.jpg" alt=""></a>
+            <a href="images/galery-7.jpg" title="Safari"><img class="galery__item-img" src="images/galery-7.jpg"
+                alt=""></a>
+            <a href="images/galery-8.jpg" title="Safari"><img class="galery__item-img" src="images/galery-8.jpg"
+                alt=""></a>
+            <a href="images/galery-9.jpg" title="Safari"><img class="galery__item-img" src="images/galery-9.jpg"
+                alt=""></a>
             <a href="images/galery-10.jpg" title="Safari"><img class="galery__item-img" src="images/galery-10.jpg"
                 alt=""></a>
             <a href="images/galery-11.jpg" title="Safari"><img class="galery__item-img" src="images/galery-11.jpg"
@@ -267,39 +276,47 @@
     <div class="container">
       <div class="premium__title">Сафари тур премиум класса</div>
       <div class="premium__text">
-          <p>Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за дикими
+        <p>Сафари тур ? это уникальное путешествие в мир дикой природы, знакомство с многогранной Африкой, наблюдение за
+          дикими
           животными в их привычной среде обитания.
-</p>
-          <p><span>САФАРИ ТУРИСТИК</span> специализируется на элитном туризме и представляет своим клиентам уникальные программы сафари
+        </p>
+        <p><span>САФАРИ ТУРИСТИК</span> специализируется на элитном туризме и представляет своим клиентам уникальные
+          программы сафари
           туров.Среди представленных вариантов можно найти нечто неповторимое, по вашему вкусу.</p>
-          <p>Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и увидеть то,
+        <p>Если вы желаете отправиться в самое незабываемое путешествие в вашей жизни, побывать в уникальных местах и
+          увидеть то,
           что удается лицезреть немногим ? тогда сафари туры созданы для вас.</p>
-          <p>Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями отдых.</p>
-          <p>Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством куратора,
-          осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP класса, поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально продуманной программой,
-          первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете прочитать все
+        <p>Сафари туры выбирают туристы, которые предпочитают динамичный, яркий, насыщенный эмоциями и впечатлениями
+          отдых.</p>
+        <p>Программы сафари туров по Африке рассчитаны на определенную группу людей, которые под покровительством
+          куратора,
+          осуществляют увлекательное путешествие по заранее спланированному маршруту. Мы ориентированы на клиентов VIP
+          класса, поэтому все предложения, представленные в нашей коллекции, отличаются высшим классом, детально
+          продуманной программой,
+          первоклассным сервисом и индивидуальным подходом к каждому участнику путешествия. У нас на сайте вы можете
+          прочитать все
           подробности о программах уже сформированных туров по сафари.</p>
       </div>
       <div class="premium__info">
         <div class="premium__info-item">
           16
           <p>лет успешной
-          работы</p>
+            работы</p>
         </div>
         <div class="premium__info-item">
           50
           <p>гостиниц без
-          посредников</p>
+            посредников</p>
         </div>
         <div class="premium__info-item">
           25+
           <p>собственных
-          туров</p>
+            туров</p>
         </div>
         <div class="premium__info-item">
           1 220 000
           <p>кв. км – площадь наших
-          путешествий</p>
+            путешествий</p>
         </div>
         <div class="premium__info-item">
           5000
@@ -308,6 +325,62 @@
       </div>
     </div>
   </section>
+  <section class="application">
+    <div class="container">
+      <div class="application__title">
+        <h2>Забронируйте отдых в Африке</h2>
+      </div>
+      <div class="application__form">
+        <form action="#" method="post">
+          <input type="name" id="name" name="user_name" placeholder="Ваше имя">
+          <input
+            type="tel" id="tel" name="user_phone" placeholder="Телефон">
+            <input type="email" id="mail" name="user_mail"
+            placeholder="E-mail">
+            <textarea id="msg" name="user_message" placeholder="Комментарий"></textarea>
+            <button class="big-btn" type="submit">Отправить заявку</button>
+            <label><input class="application-checkbox" type="checkbox">
+              <span></span>
+              Согласие на обработку персональных данных</label>
+        </form>
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <img src="images/logo.svg" alt="">
+      <div class="footer__inner">
+        <div class="footer__item">
+          <div class="footer__title">
+            Турагентство «Сафари Туристик»
+          </div>
+          <div class="footer__text">
+            <p>© 2021. Все права защищены</p>
+            <a href="#">Политика конфиденциальности</a>
+          </div>
+        </div>
+        <div class="footer__item">
+          <div class="footer__title">
+            Адрес:
+          </div>
+          <div class="footer__text">
+            <p>г. Киев, ул.Мира, 20,<br>
+              отель «Динамо», 1 этаж</p>
+          </div>
+        </div>
+        <div class="footer__item">
+          <div class="footer__title">
+            Заказ туров и бронирование:
+          </div>
+          <div class="footer__text">
+            <a href="tel:80508543543">тел. 8-050-8-543-543</a>
+            <a href="mailto:safari_turistic@gmail.com">e-mail: safari_turistic@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.magnific-popup.js"></script>
