--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <a class="gold-btn" href="tel:80508543543">тел. 8-050-8-543-543</a>
         </div>
         <nav class="header__menu">
+          <button class="menu-btn">
+            <span></span>
+          </button>
           <ul>
             <li><a href="#">Бронирование</a></li>
             <li><a href="#">Экскурсии</a></li>
@@ -48,7 +51,7 @@
       </div>
     </div>
   </header>
-  <section class="direction">
+  <!-- <section class="direction">
     <div class="container">
       <div class="direction__inner">
         <div class="direction__item">
@@ -223,8 +226,8 @@
         </div>
       </div>
     </div>
-  </section>
-  <div class="strime"><iframe width="560" height="315" src="https://www.youtube.com/embed/48MFrf5ADp8"
+  </section> -->
+  <!-- <div class="strime"><iframe width="560" height="315" src="https://www.youtube.com/embed/48MFrf5ADp8"
       title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen></iframe></div>
@@ -380,7 +383,7 @@
       </div>
     </div>
     </div>
-  </footer>
+  </footer> -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.magnific-popup.js"></script>
