--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
   </header>
-  <!-- <section class="direction">
+  <section class="direction">
     <div class="container">
       <div class="direction__inner">
         <div class="direction__item">
@@ -383,7 +383,7 @@
       </div>
     </div>
     </div>
-  </footer> -->
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.magnific-popup.js"></script>
